--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "face-api.js": "^0.22.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.14.4",
     "react-scripts": "3.4.1",
